katars/tests/snaps/snapshots/snap_errors__span_method_call.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"kind P { x: Int }\\nlet p = P { x: 1 }\\np.nonexistent()\")"
---
Error: 'P' has no field or method 'nonexistent'
   ╭─[<test>:3:1]
   │
 3 │ p.nonexistent()
   │ ──────┬──────  
   │       ╰──────── 'P' has no field or method 'nonexistent'
───╯
